# zapurl-backend

./: .dockerignore  Makefile  docker-compose.yml  eslint.config.mjs  tsconfig.base.json
auth-service/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
auth-service/src/: app.ts  auth.controller.ts  auth.routes.ts  auth.schema.ts  auth.service.ts  auth.types.ts  hash.util.ts  index.ts  mongoose.lib.ts  server.ts  session.model.ts  types.d.ts  user.model.ts
nginx/: nginx.conf
scan-service/: Dockerfile  main.py  pyproject.toml  test_service.py
shared/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
shared/lib/: index.ts
shared/middleware/: index.ts
shared/models/: index.ts
shared/types/: index.ts
shared/utils/: index.ts  server.utils.ts
user-service/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.dev.json
user-service/src/: app.ts  server.ts  user.controller.ts  user.routes.ts  user.service.ts
