[project]
name = "scan-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dnspython>=2.8.0",
    "fastapi>=0.127.1",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "python-whois>=0.9.6",
    "uvicorn>=0.40.0",
]
